<resources>
    <string name="app_name">Body Mass Index</string>
    <string name="main_invalid_weight">Invalid weight.</string>
    <string name="main_invalid_height">Invalid height.</string>
    <string name="main_bmi">BMI: %.1f %s</string>
    <string name="main_underweight">Underweight</string>
    <string name="main_normalweight">Normal weight</string>
    <string name="main_overweight">Overweight</string>
    <string name="main_obesity1">Obesity class 1</string>
    <string name="main_obesity2">Obesity class 2</string>
    <string name="main_obesity3">Obesity class 3</string>
    <string name="weight">(kg)</string>
    <string name="titleHeight">Height</string>
    <string name="height">(m)</string>
    <string name="reset">RESET</string>
    <string name="calculate">CALCULATE BMI</string>
    <string name="result"></string>
    <string name="titleWeight">Weight</string>

</resources>
